@@ -1,4 +1,6 @@
 
+ o modified Fixpoint module so that it also works with unlabeled
+   graphs (contributed by Markus W. Weissmann)
  o support of lablgtk2 installed with findlib (contributed by B. Monate)
  o new module [Dominator] to compute dominators
    (contributed by David Brumley and Ivan Jager)
